--- a/src/styles.scss
+++ b/src/styles.scss
@@ -260,9 +260,16 @@ body {
         border: 2px solid rgba(186, 32, 150, 0.5);
         border-radius: 15px;
       }
+      .todo_list_empty {
+        margin-top: 50px;
+        text-align: center;
+        font-size: 30px;
+        color: $light;
+        font-weight: 700;
+      }
     }
   }
-  .notification_deletion {
+  .notification {
     position: absolute;
     bottom: 10px;
     right: 10px;
